--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,8 @@
-dist: trusty
+dist: xenial
 sudo: true
+before_install:
+  - sudo apt-get -qq update
+  - sudo apt-get install -y libxml2-dev
 install:
   - sudo apt-get install lilypond texlive-latex-recommended texlive-latex-extra texlive-fonts-recommended
   - sudo apt-get install chktex
