--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,8 @@ before_install:
   - sudo apt-get -qq update
   - sudo apt-get install -y libxml2-dev
 install:
-  - sudo apt-get install lilypond texlive-latex-recommended texlive-latex-extra texlive-fonts-recommended
+  - sudo apt-get install lilypond=2.18.2-4.1
+  - sudo apt-get install texlive-latex-recommended texlive-latex-extra texlive-fonts-recommended
   - sudo apt-get install chktex
 script:
   - make
